# a-pirates-life-for-me

./: .gitignore  CMakeLists.txt  pirate-cmake.cpp  pirate-cmake.h
dev-log/: 3-25 march.txt  4-25 april.txt  7-35 july.txt  8-25 august.txt  9-25 september.txt  april.txt  july.txt  june.txt  march.txt  may.txt
environment/: ocean.cpp  ocean.h  wind.cpp  wind.h  world.cpp  world.h
game/: config.h  managers.cpp  managers.h  observer.cpp  observer.h  player.cpp  player.h  utility_functions.cpp  utility_functions.h
models/: bay_terrain.glb  cove_island.glb  cove_terrain.glb  hub_terrain.glb  isle_terrain.glb  lagoon_terrain.glb  medium_pirate_boat_hull.glb  medium_ship_brown.glb  pirate_ship.glb  pirate_ship.mtl  reef_terrain.glb
objects/: object.cpp  object.h  ship.cpp  ship.h  ship_components.cpp  ship_components.h
resources/shaders/: rlights.cpp  rlights.h
src/: animation.cpp  animation.h  chunk.cpp  chunk.h  collision_events.h  config.h  controls.h  entities.cpp  entities.h  environment.h  event.h  event_handler.cpp  event_handler.h  events.cpp  events.h  events_interface.h  game.cpp  game.h  hitbox.h  hud.cpp  hud.h  interactions.cpp  interactions.h  managers.cpp  managers.h  object.cpp  object.h  object_factory.cpp  ocean.cpp  octree.cpp  octree.h  octtree.cpp  octtree.h  pirate-cmake.cpp  pirate-cmake.h  player.cpp  player.h  rendering.cpp  rendering.h  ship.cpp  (+13 more)
tests/: octree_test.cpp  octree_tests.cpp
